This fixes retrieval of email from IMAP servers. It seems there is a difference between the behaviour of BPath in R5 and Haiku (as this used to work in R5). More specifically:

BPath blah("blah");
printf("%s\n", blah.Path());

It seems that in R5 it would print "blah" (untested as I don't have R5 anymore, but this code definitelly used to work). And in Haiku it prints "/currrent/path/blah".

This fixed bug #3187.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29326 a95241bf-73f2-0310-859d-f6bbb57e9c96